Remove unsupported endpoint
inline_additional_properties doesn't yet work
